--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ishan-me/omato_webpack#readme",
   "devDependencies": {
+    "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.4.1"
   }
 }
