--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ishan-me/omato_webpack#readme",
   "devDependencies": {
     "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
