--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "i": "^0.3.5",
     "node-sass": "^4.5.2",
+    "pug": "^2.0.0-beta.12",
+    "pug-loader": "^2.3.0",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
