--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "devDependencies": {
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "i": "^0.3.5",
+    "image-webpack-loader": "^3.3.0",
     "node-sass": "^4.5.2",
     "pug": "^2.0.0-beta.12",
     "pug-loader": "^2.3.0",
