--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "prod": "npm run clean && webpack -p",
+    "prod": "npm run clean && NODE_ENV=production webpack -p",
     "clean": "rimraf ./dist/*"
   },
   "repository": {
@@ -27,6 +27,8 @@
     "html-webpack-plugin": "^2.28.0",
     "i": "^0.3.5",
     "image-webpack-loader": "^3.3.0",
+    "imports-loader": "^0.7.1",
+    "jquery": "^3.2.1",
     "node-sass": "^4.5.2",
     "pug": "^2.0.0-beta.12",
     "pug-loader": "^2.3.0",
